--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>19.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
